Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -359,7 +359,7 @@
   "pli-tv-kd10:4.3.11": "“And how do you do this?” ",
   "pli-tv-kd10:4.4.1": "“I think like this, ",
   "pli-tv-kd10:4.4.2": "‘How fortunate I am to be living with such fellow monastics!’ ",
-  "pli-tv-kd10:4.4.3": "And I do acts of kindness toward them, by body, ",
+  "pli-tv-kd10:4.4.3": "And I do acts of kindness toward them by body, ",
   "pli-tv-kd10:4.4.4": "speech, ",
   "pli-tv-kd10:4.4.5": "and mind, both in public and in private. ",
   "pli-tv-kd10:4.4.6": "I think, ",
