Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -365,7 +365,7 @@
   "pli-tv-kd10:4.4.6": "I think, ",
   "pli-tv-kd10:4.4.7": "‘Why don’t I set aside what I wish to do and instead do what these venerables wish?’ ",
   "pli-tv-kd10:4.4.8": "And that’s what I do. ",
-  "pli-tv-kd10:4.4.9": "We are separate in body, but it’s as if we’re one in mind.” ",
+  "pli-tv-kd10:4.4.9": "We’re separate in body, but it might seem as if we’re one in mind.” ",
   "pli-tv-kd10:4.4.10": "Nandiya and Kimila then repeated what Anuruddha had said. ",
   "pli-tv-kd10:4.5.1": "“I hope, Anuruddha, that you’re heedful and energetic?” ",
   "pli-tv-kd10:4.5.2": "“Yes we are, Sir.” ",
