Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -368,7 +368,7 @@
   "pli-tv-kd10:4.4.9": "We’re separate in body, but it might seem as if we’re one in mind.” ",
   "pli-tv-kd10:4.4.10": "Nandiya and Kimila then repeated what Anuruddha had said. ",
   "pli-tv-kd10:4.5.1": "“I hope, Anuruddha, that you’re heedful and energetic?” ",
-  "pli-tv-kd10:4.5.2": "“Yes we are, Sir.” ",
+  "pli-tv-kd10:4.5.2": "“Yes, Sir, we are.” ",
   "pli-tv-kd10:4.5.3": "“And how is it that you’re heedful and energetic?” ",
   "pli-tv-kd10:4.5.4": "“Whoever returns first from almsround in the village, he prepares the seats and sets out a foot stool, a foot scraper, and water for washing the feet. He washes the bowl for leftovers and puts it back out, and sets out water for drinking and water for washing. ",
   "pli-tv-kd10:4.5.5": "Whoever returns last from almsround may eat the leftovers, or he discards them where there are no cultivated plants ",
