--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -382,9 +382,9 @@
   "pli-tv-kd10:4.6.2": "When he eventually arrived, ",
   "pli-tv-kd10:4.6.3": "he stayed in a protected forest grove, at the foot of an auspicious sal tree. ",
   "pli-tv-kd10:4.6.4": "Then, while he was reflecting in private, the Buddha thought, ",
-  "pli-tv-kd10:4.6.5": "“When I was previously surrounded by people, I was not at ease because of those monks at Kosambī who were quarreling, arguing, and creating legal issues in the Sangha. ",
-  "pli-tv-kd10:4.6.6": "But now that I’m alone, without a companion, I’m happy and at ease because I’m apart from those monks at Kosambī.” ",
-  "pli-tv-kd10:4.6.7": "At that time there was a large bull elephant who was surrounded by a crowd of male and female elephants, by young elephants and baby elephants. He ate grass with broken tips, and other elephants ate the branches that he had folded together. He drank muddy water, and when he was immersed in a pool, the female elephants came rubbing their bodies against his. ",
+  "pli-tv-kd10:4.6.5": "“Previously, when I was surrounded by those quarreling monks at Kosambī, I wasn’t at ease. ",
+  "pli-tv-kd10:4.6.6": "But now that I’m alone, away from those monks, I’m happy and at ease.” ",
+  "pli-tv-kd10:4.6.7": "At that time there was a large bull elephant who lived surrounded by a herd—by males and females, by juveniles and babies. He ate grass with the tips broken off and drank muddy water. Other elephants ate the branches that he had pulled down. And when he was immersed in a pool, the female elephants came rubbing their bodies against his. ",
   "pli-tv-kd10:4.6.8": "He considered this and thought, ",
   "pli-tv-kd10:4.6.10": "“Why don’t I leave the herd and stay by myself?” ",
   "pli-tv-kd10:4.7.1": "He then left the herd and went to Pālileyyaka, to the Buddha at the foot of the auspicious sal tree, in the protected forest grove. And he attended on the Buddha, using his trunk to set out water for drinking and water for washing and to clear the vegetation. ",
