--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -387,12 +387,12 @@
   "pli-tv-kd10:4.6.7": "At that time there was a large bull elephant who lived surrounded by a herd—by males and females, by juveniles and babies. He ate grass with the tips broken off and drank muddy water. Other elephants ate the branches that he had pulled down. And when he was immersed in a pool, the female elephants came rubbing their bodies against his. ",
   "pli-tv-kd10:4.6.8": "He considered this and thought, ",
   "pli-tv-kd10:4.6.10": "“Why don’t I leave the herd and stay by myself?” ",
-  "pli-tv-kd10:4.7.1": "He then left the herd and went to Pālileyyaka, to the Buddha at the foot of the auspicious sal tree, in the protected forest grove. And he attended on the Buddha, using his trunk to set out water for drinking and water for washing and to clear the vegetation. ",
+  "pli-tv-kd10:4.7.1": "He then left the herd and went to Pālileyyaka, to where the was Buddha at the foot of the auspicious sal tree. And he attended on the Buddha, using his trunk to set out water for drinking and water for washing, and to clear the vegetation. ",
   "pli-tv-kd10:4.7.2": "He thought, ",
-  "pli-tv-kd10:4.7.3": "“When I was previously surrounded by elephants, I was not at ease because of the other elephants. ",
-  "pli-tv-kd10:4.7.4": "But now that I’m alone, without a companion, I’m happy and at ease because I’m apart from those elephants.” ",
+  "pli-tv-kd10:4.7.3": "“Previously, when I was surrounded by the other elephants, I wasn’t at ease. ",
+  "pli-tv-kd10:4.7.4": "But now that I’m alone, away from those elephants, I’m happy and at ease.” ",
   "pli-tv-kd10:4.7.5": "After considering his own seclusion and reading the mind of the elephant, the Buddha uttered a heartfelt exclamation: ",
-  "pli-tv-kd10:4.7.6": "“The mind of this large elephant, ",
+  "pli-tv-kd10:4.7.6": "“The mind of this mighty elephant, ",
   "pli-tv-kd10:4.7.7": "With tusks like chariot poles, ",
   "pli-tv-kd10:4.7.8": "Agrees with the mind of the sage, ",
   "pli-tv-kd10:4.7.9": "Since they each delight in the forest solitude.” ",
