--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -394,7 +394,7 @@
   "pli-tv-kd10:4.7.5": "After considering his own seclusion and reading the mind of the elephant, the Buddha uttered a heartfelt exclamation: ",
   "pli-tv-kd10:4.7.6": "“The mind of this mighty elephant, ",
   "pli-tv-kd10:4.7.7": "With tusks like chariot poles, ",
-  "pli-tv-kd10:4.7.8": "Agrees with the mind of the sage, ",
+  "pli-tv-kd10:4.7.8": "Agrees with the mind of the Sage, ",
   "pli-tv-kd10:4.7.9": "Since they each delight in the forest solitude.” ",
   "pli-tv-kd10:5.1.1": "When the Buddha had stayed at Pālileyyaka for as long as he liked, he set out wandering toward Sāvatthī. ",
   "pli-tv-kd10:5.1.2": "When he eventually arrived, ",
