Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -403,8 +403,8 @@
   "pli-tv-kd10:5.1.5": "“These venerable monks at Kosambī have caused us much misfortune. ",
   "pli-tv-kd10:5.1.6": "The Buddha himself left because he was troubled by them. ",
   "pli-tv-kd10:5.1.7": "Well then, let’s not bow down, rise up, raise our joined palms, or do acts of respect for them. And let’s not honor, respect, esteem, or associate with them, nor give them almsfood. ",
-  "pli-tv-kd10:5.1.8": "Because of this, they will either leave, disrobe, or reconcile with the Buddha.” ",
-  "pli-tv-kd10:5.2.1": "And that is what they did. ",
+  "pli-tv-kd10:5.1.8": "Then, they’ll either leave, disrobe, or reconcile with the Buddha.” ",
+  "pli-tv-kd10:5.2.1": "And they did just that. ",
   "pli-tv-kd10:5.2.2": "Soon the monks at Kosambī said, ",
   "pli-tv-kd10:5.2.3": "“Well then, let’s go to Sāvatthī and resolve this legal issue in the presence of the Buddha.” ",
   "pli-tv-kd10:5.2.4.0": "6. The account of the eighteen bases ",
