--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -418,7 +418,7 @@
   "pli-tv-kd10:5.3.8": "“And how do I know what accords with the Teaching and what doesn’t?” ",
   "pli-tv-kd10:5.4.1": "“There are eighteen grounds for knowing that someone is speaking contrary to the Teaching: ",
   "pli-tv-kd10:5.4.2": "A monk proclaims what’s contrary to the Teaching as being in according with it, ",
-  "pli-tv-kd10:5.4.3": "and what is the Teaching as contrary to the Teaching. ",
+  "pli-tv-kd10:5.4.3": "and what’s in accordance with the Teaching as contrary to it. ",
   "pli-tv-kd10:5.4.4": "He proclaims what is contrary to the Monastic Law as the Monastic Law, ",
   "pli-tv-kd10:5.4.5": "and what is the Monastic Law as contrary to the Monastic Law. ",
   "pli-tv-kd10:5.4.6": "He proclaims what hasn’t been spoken by the Buddha as spoken by the Buddha, ",
