--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -419,12 +419,12 @@
   "pli-tv-kd10:5.4.1": "“There are eighteen grounds for knowing that someone is speaking contrary to the Teaching: ",
   "pli-tv-kd10:5.4.2": "A monk proclaims what’s contrary to the Teaching as being in according with it, ",
   "pli-tv-kd10:5.4.3": "and what’s in accordance with the Teaching as contrary to it. ",
-  "pli-tv-kd10:5.4.4": "He proclaims what is contrary to the Monastic Law as the Monastic Law, ",
-  "pli-tv-kd10:5.4.5": "and what is the Monastic Law as contrary to the Monastic Law. ",
-  "pli-tv-kd10:5.4.6": "He proclaims what hasn’t been spoken by the Buddha as spoken by the Buddha, ",
-  "pli-tv-kd10:5.4.7": "and what has been spoken by the Buddha as not spoken by the Buddha. ",
-  "pli-tv-kd10:5.4.8": "He proclaims what was not practiced by the Buddha as practiced by the Buddha, ",
-  "pli-tv-kd10:5.4.9": "and what was practiced by the Buddha as not practiced by the Buddha. ",
+  "pli-tv-kd10:5.4.4": "He proclaims what’s contrary to the Monastic Law as being in accordance with it, ",
+  "pli-tv-kd10:5.4.5": "and what’s in accordance with the Monastic Law as contrary to it. ",
+  "pli-tv-kd10:5.4.6": "He proclaims what hasn’t been spoken by the Buddha as spoken by him, ",
+  "pli-tv-kd10:5.4.7": "and what’s been spoken by the Buddha as not spoken by him. ",
+  "pli-tv-kd10:5.4.8": "He proclaims what wasn’t practiced by the Buddha as practiced by him, ",
+  "pli-tv-kd10:5.4.9": "and what was practiced by the Buddha as not practiced by him. ",
   "pli-tv-kd10:5.4.10": "He proclaims what was not laid down by the Buddha as laid down by the Buddha, ",
   "pli-tv-kd10:5.4.11": "and what was laid down by the Buddha as not laid down by the Buddha. ",
   "pli-tv-kd10:5.4.12": "He proclaims a non-offense as an offense, ",
