Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -425,8 +425,8 @@
   "pli-tv-kd10:5.4.7": "and what’s been spoken by the Buddha as not spoken by him. ",
   "pli-tv-kd10:5.4.8": "He proclaims what wasn’t practiced by the Buddha as practiced by him, ",
   "pli-tv-kd10:5.4.9": "and what was practiced by the Buddha as not practiced by him. ",
-  "pli-tv-kd10:5.4.10": "He proclaims what was not laid down by the Buddha as laid down by the Buddha, ",
-  "pli-tv-kd10:5.4.11": "and what was laid down by the Buddha as not laid down by the Buddha. ",
+  "pli-tv-kd10:5.4.10": "He proclaims what wasn’t laid down by the Buddha as laid down by him, ",
+  "pli-tv-kd10:5.4.11": "and what was laid down by the Buddha as not laid down by him. ",
   "pli-tv-kd10:5.4.12": "He proclaims a non-offense as an offense, ",
   "pli-tv-kd10:5.4.13": "and an offense as a non-offense. ",
   "pli-tv-kd10:5.4.14": "He proclaims a light offense as heavy, ",
