--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -435,10 +435,10 @@
   "pli-tv-kd10:5.4.17": "and an incurable offense as curable. ",
   "pli-tv-kd10:5.4.18": "He proclaims a grave offense as minor, ",
   "pli-tv-kd10:5.4.19": "and a minor offense as grave. ",
-  "pli-tv-kd10:5.5.1": "And there are eighteen bases for knowing that someone is speaking in accordance with the Teaching: ",
-  "pli-tv-kd10:5.5.2": "A monk proclaims what is contrary to the Teaching as contrary to the Teaching, ",
-  "pli-tv-kd10:5.5.3": "and what is the Teaching as the Teaching. ",
-  "pli-tv-kd10:5.5.4": "He proclaims what is contrary to the Monastic Law as contrary to the Monastic Law, ",
+  "pli-tv-kd10:5.5.1": "And there are eighteen grounds for knowing that someone is speaking in accordance with the Teaching: ",
+  "pli-tv-kd10:5.5.2": "A monk proclaims what’s contrary to the Teaching as such, ",
+  "pli-tv-kd10:5.5.3": "and what’s in accordance with the Teaching as such. ",
+  "pli-tv-kd10:5.5.4": "He proclaims what’s contrary to the Monastic Law as such, ",
   "pli-tv-kd10:5.5.5": "and what is the Monastic Law as the Monastic Law. ",
   "pli-tv-kd10:5.5.6": "He proclaims what hasn’t been spoken by the Buddha as not spoken by the Buddha, ",
   "pli-tv-kd10:5.5.7": "and what has been spoken by the Buddha as spoken by the Buddha. ",
