Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -439,10 +439,10 @@
   "pli-tv-kd10:5.5.2": "A monk proclaims what’s contrary to the Teaching as such, ",
   "pli-tv-kd10:5.5.3": "and what’s in accordance with the Teaching as such. ",
   "pli-tv-kd10:5.5.4": "He proclaims what’s contrary to the Monastic Law as such, ",
-  "pli-tv-kd10:5.5.5": "and what is the Monastic Law as the Monastic Law. ",
-  "pli-tv-kd10:5.5.6": "He proclaims what hasn’t been spoken by the Buddha as not spoken by the Buddha, ",
-  "pli-tv-kd10:5.5.7": "and what has been spoken by the Buddha as spoken by the Buddha. ",
-  "pli-tv-kd10:5.5.8": "He proclaims what was not practiced by the Buddha as not practiced by the Buddha, ",
+  "pli-tv-kd10:5.5.5": "and what’s in accordance with the Monastic Law as such. ",
+  "pli-tv-kd10:5.5.6": "He proclaims what hasn’t been spoken by the Buddha as such, ",
+  "pli-tv-kd10:5.5.7": "and what’s been spoken by the Buddha as such. ",
+  "pli-tv-kd10:5.5.8": "He proclaims what wasn’t practiced by the Buddha as such, ",
   "pli-tv-kd10:5.5.9": "and what was practiced by the Buddha as practiced by the Buddha. ",
   "pli-tv-kd10:5.5.10": "He proclaims what was not laid down by the Buddha as not laid down by the Buddha, ",
   "pli-tv-kd10:5.5.11": "and what was laid down by the Buddha as laid down by the Buddha. ",
