Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -443,10 +443,10 @@
   "pli-tv-kd10:5.5.6": "He proclaims what hasn’t been spoken by the Buddha as such, ",
   "pli-tv-kd10:5.5.7": "and what’s been spoken by the Buddha as such. ",
   "pli-tv-kd10:5.5.8": "He proclaims what wasn’t practiced by the Buddha as such, ",
-  "pli-tv-kd10:5.5.9": "and what was practiced by the Buddha as practiced by the Buddha. ",
-  "pli-tv-kd10:5.5.10": "He proclaims what was not laid down by the Buddha as not laid down by the Buddha, ",
-  "pli-tv-kd10:5.5.11": "and what was laid down by the Buddha as laid down by the Buddha. ",
-  "pli-tv-kd10:5.5.12": "He proclaims a non-offense as a non-offense, ",
+  "pli-tv-kd10:5.5.9": "and what was practiced by the Buddha as such. ",
+  "pli-tv-kd10:5.5.10": "He proclaims what wasn’t laid down by the Buddha as such, ",
+  "pli-tv-kd10:5.5.11": "and what was laid down by the Buddha as such. ",
+  "pli-tv-kd10:5.5.12": "He proclaims a non-offense as such, ",
   "pli-tv-kd10:5.5.13": "and an offense as an offense. ",
   "pli-tv-kd10:5.5.14": "He proclaims a light offense as light, ",
   "pli-tv-kd10:5.5.15": "and a heavy offense as heavy. ",
