Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -447,7 +447,7 @@
   "pli-tv-kd10:5.5.10": "He proclaims what wasn’t laid down by the Buddha as such, ",
   "pli-tv-kd10:5.5.11": "and what was laid down by the Buddha as such. ",
   "pli-tv-kd10:5.5.12": "He proclaims a non-offense as such, ",
-  "pli-tv-kd10:5.5.13": "and an offense as an offense. ",
+  "pli-tv-kd10:5.5.13": "and an offense as such. ",
   "pli-tv-kd10:5.5.14": "He proclaims a light offense as light, ",
   "pli-tv-kd10:5.5.15": "and a heavy offense as heavy. ",
   "pli-tv-kd10:5.5.16": "He proclaims a curable offense as curable, ",
