Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -478,10 +478,10 @@
   "pli-tv-kd10:5.7.3": "she too went to the Buddha, bowed, ",
   "pli-tv-kd10:5.7.4": "and told him, ",
   "pli-tv-kd10:5.7.6": "adding, “Venerable Sir, how should I act toward these monks?” ",
-  "pli-tv-kd10:5.7.7": "“Well, Gotamī, listen to the teaching from both sides, ",
-  "pli-tv-kd10:5.7.8": "and then approve of the views, beliefs, and persuasion of those who speak in accordance with the Teaching. ",
-  "pli-tv-kd10:5.7.9": "And whatever support the Sangha of nuns expects from the Sangha of monks, they should get all of it from those who speak in accordance with the Teaching.” ",
-  "pli-tv-kd10:5.8.1": "When Anāthapiṇḍiko heard ",
+  "pli-tv-kd10:5.7.7": "“Well, Gotamī, listen to the teaching from both sides. ",
+  "pli-tv-kd10:5.7.8": "Then approve of the views, beliefs, and persuasion of those who speak in accordance with the Teaching. ",
+  "pli-tv-kd10:5.7.9": "And whatever support the Sangha of nuns seeks from the Sangha of monks, they should get it all from those who speak in accordance with the Teaching.” ",
+  "pli-tv-kd10:5.8.1": "When Anāthapiṇḍika heard ",
   "pli-tv-kd10:5.8.2": "that they were coming, ",
   "pli-tv-kd10:5.8.3": "he too went to the Buddha, bowed, sat down, ",
   "pli-tv-kd10:5.8.4": "and told him, ",
