Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -503,7 +503,7 @@
   "pli-tv-kd10:5.10.5": "adding, “How should we prepare dwellings for these monks?” ",
   "pli-tv-kd10:5.10.6": "“Give them dwellings in a separate place.” ",
   "pli-tv-kd10:5.10.7": "“But what should we do if there are no dwellings in a separate place?” ",
-  "pli-tv-kd10:5.10.8": "“Separate the dwellings and then give them out. ",
+  "pli-tv-kd10:5.10.8": "“In that case, make them separated and then give them out. ",
   "pli-tv-kd10:5.10.9": "Under no circumstances, Sāriputta, should a dwelling be reserved for a more senior monk. ",
   "pli-tv-kd10:5.10.10": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd10:5.10.11": "“And what should we do regarding food and requisites?” ",
