Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -534,18 +534,18 @@
   "pli-tv-kd10:5.13.5": "and told him ",
   "pli-tv-kd10:5.13.6": "what had happened, ",
   "pli-tv-kd10:5.13.9": "adding, “How should we proceed with this?” ",
-  "pli-tv-kd10:5.14.1": "“Since this is the case, you should create unity in the Sangha so as to resolve this matter. ",
+  "pli-tv-kd10:5.14.1": "“This being the case, you should resolve this matter by unifying the Sangha. ",
   "pli-tv-kd10:5.14.2": "And it should be done like this. ",
   "pli-tv-kd10:5.14.3": "Everyone should gather in one place, including those who are sick. ",
   "pli-tv-kd10:5.14.4": "No-one should give their consent. ",
   "pli-tv-kd10:5.14.5": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd10:5.14.6": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd10:5.14.7": "This monk has recognized that he had committed an offense. He’s been ejected and now re-admitted. Because of this, the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been removed. ",
-  "pli-tv-kd10:5.14.8": "If it seems appropriate to the Sangha, let us create unity in the Sangha so as to resolve this matter. ",
+  "pli-tv-kd10:5.14.7": "This monk has recognized that he had committed an offense and was ejected. He’s now been re-admitted. Because of this, the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been removed. ",
+  "pli-tv-kd10:5.14.8": "If it seems appropriate to the Sangha, let’s resolve this matter by unifying the Sangha. ",
   "pli-tv-kd10:5.14.9": "This is the motion. ",
   "pli-tv-kd10:5.14.10": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd10:5.14.11": "This monk has recognized that he had committed an offense. He’s been ejected and now re-admitted. Because of this, the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been removed. ",
-  "pli-tv-kd10:5.14.12": "The Sangha is creating unity in the Sangha so as to resolve this matter. ",
+  "pli-tv-kd10:5.14.11": "This monk has recognized that he had committed an offense and was ejected. He’s now been re-admitted. Because of this, the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been removed. ",
+  "pli-tv-kd10:5.14.12": "The Sangha resolves this matter by unifying the Sangha. ",
   "pli-tv-kd10:5.14.13": "Any monk who approves of creating unity in the Sangha so as to resolve this matter should remain silent. Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd10:5.14.14": "The Sangha has created unity in the Sangha so as to resolve this matter. ",
   "pli-tv-kd10:5.14.15": "The schism in the Sangha has come to an end. The fracture in the Sangha has come to an end. The separation in the Sangha has come to an end. ",
