Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -546,8 +546,8 @@
   "pli-tv-kd10:5.14.10": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd10:5.14.11": "This monk has recognized that he had committed an offense and was ejected. He’s now been re-admitted. Because of this, the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been removed. ",
   "pli-tv-kd10:5.14.12": "The Sangha resolves this matter by unifying the Sangha. ",
-  "pli-tv-kd10:5.14.13": "Any monk who approves of creating unity in the Sangha so as to resolve this matter should remain silent. Any monk who doesn’t approve should speak up. ",
-  "pli-tv-kd10:5.14.14": "The Sangha has created unity in the Sangha so as to resolve this matter. ",
+  "pli-tv-kd10:5.14.13": "Any monk who approves of resolving this matter by unifying Sangha should remain silent. Any monk who doesn’t approve should speak up. ",
+  "pli-tv-kd10:5.14.14": "The Sangha has resolved this matter by unifying the Sangha. ",
   "pli-tv-kd10:5.14.15": "The schism in the Sangha has come to an end. The fracture in the Sangha has come to an end. The separation in the Sangha has come to an end. ",
   "pli-tv-kd10:5.14.16": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
   "pli-tv-kd10:5.14.17": "The observance-day ceremony, the recitation of the Monastic Code, should be done straightaway.” ",
