--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -554,7 +554,7 @@
   "pli-tv-kd10:6.1.0": "9. Upāli’s questions about unity in the Sangha ",
   "pli-tv-kd10:6.1.1": "Soon afterwards Venerable Upāli went to the Buddha, bowed, sat down, ",
   "pli-tv-kd10:6.1.2": "and said, ",
-  "pli-tv-kd10:6.1.3": "“Venerable Sir, if the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, haven’t been investigated by the Sangha, haven’t been resolved by the Sangha, yet the Sangha creates unity in the Sangha—is that unity in the Sangha legitimate?” ",
+  "pli-tv-kd10:6.1.3": "“Venerable Sir, if the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, hasn’t been decided by the Sangha, hasn’t been resolved by the Sangha, yet the Sangha unifies the Sangha—is that unity in the Sangha legitimate?” ",
   "pli-tv-kd10:6.1.4": "“That unity in the Sangha is illegitimate.” ",
   "pli-tv-kd10:6.1.5": "“If the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been decided by the Sangha, has been resolved by the Sangha, and the Sangha then unifies the Sangha—is that unity in the Sangha legitimate?” ",
   "pli-tv-kd10:6.1.6": "“That unity in the Sangha is legitimate.” ",
