Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -558,7 +558,7 @@
   "pli-tv-kd10:6.1.4": "“That unity in the Sangha is illegitimate.” ",
   "pli-tv-kd10:6.1.5": "“If the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been decided by the Sangha, has been resolved by the Sangha, and the Sangha then unifies the Sangha—is that unity in the Sangha legitimate?” ",
   "pli-tv-kd10:6.1.6": "“That unity in the Sangha is legitimate.” ",
-  "pli-tv-kd10:6.2.1": "“Sir, how many kinds of unity in the Sangha are there?” ",
+  "pli-tv-kd10:6.2.1": "“And Sir, how many kinds of unity in the Sangha are there?” ",
   "pli-tv-kd10:6.2.2": "“There are two kinds of unity in the Sangha. ",
   "pli-tv-kd10:6.2.3": "There is the unity in the Sangha where the wording is fulfilled, but not the purpose. ",
   "pli-tv-kd10:6.2.4": "And there is the unity in the Sangha where both the wording and the purpose are fulfilled. ",
