Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -560,7 +560,7 @@
   "pli-tv-kd10:6.1.6": "“That unity in the Sangha is legitimate.” ",
   "pli-tv-kd10:6.2.1": "“And Sir, how many kinds of unity in the Sangha are there?” ",
   "pli-tv-kd10:6.2.2": "“There are two kinds of unity in the Sangha. ",
-  "pli-tv-kd10:6.2.3": "There is the unity in the Sangha where the wording is fulfilled, but not the purpose. ",
+  "pli-tv-kd10:6.2.3": "There’s the unity in the Sangha where the wording is fulfilled, but not the purpose. ",
   "pli-tv-kd10:6.2.4": "And there is the unity in the Sangha where both the wording and the purpose are fulfilled. ",
   "pli-tv-kd10:6.2.6": "If the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, haven’t been investigated by the Sangha, haven’t been resolved by the Sangha, yet the Sangha creates unity in the Sangha, this is called unity in the Sangha where the wording is fulfilled, but not the purpose. ",
   "pli-tv-kd10:6.2.8": "If the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, have been investigated by the Sangha, have been resolved by the Sangha, and the Sangha then creates unity in the Sangha, this is called unity in the Sangha where both the wording and the purpose are fulfilled.” ",
