add files that got lost

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -45,5 +45,7 @@
   "mn3:3.22": "તો પછી એણે ભિક્ષાન્ન ખાઇને ભૂખની દુર્બળતા દૂર કરીને આ દિવસ અને રાત વિતાવી.",
   "mn3:3.23": "ભિક્ષુઓ, જોકે એ ભિક્ષુ ભિક્ષાન્ન ખાઇને ભૂખની દુર્બળતા દૂર કરીને આ દિવસ અને રાત વિતાવે, તો પણ મારા હિસાબે પહેલો ભિક્ષુ વધારે માનનીય અને પ્રસંશા યોગ્ય છે.",
   "mn3:3.24": "એ શેના માટે?",
-  "mn3:3.25": "ભિક્ષુઓ, એવું કરવાથી લાંબા સમય સુધી એ ભિક્ષુને થોડી ઈચ્છાઓ વાળો, સંતુષ્ટ, તપસ્વી, સભર, અને ઉદ્યમશીલ રહેવામાં સહાયતા મળશે."
+  "mn3:3.25": "ભિક્ષુઓ, એવું કરવાથી લાંબા સમય સુધી એ ભિક્ષુને થોડી ઈચ્છાઓ વાળો, સંતુષ્ટ, તપસ્વી, સભર, અને ઉદ્યમશીલ રહેવામાં સહાયતા મળશે.",
+  "mn3:3.26": "એટલા માટે ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં.",
+  "mn3:3.27": "મારામાં તમારા માટે એવી અનુકંપા છે:"
 }
