--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -561,11 +561,11 @@
   "pli-tv-kd10:6.2.1": "“And Sir, how many kinds of unity in the Sangha are there?” ",
   "pli-tv-kd10:6.2.2": "“There are two kinds of unity in the Sangha. ",
   "pli-tv-kd10:6.2.3": "There’s the unity in the Sangha where the wording is fulfilled, but not the purpose. ",
-  "pli-tv-kd10:6.2.4": "And there is the unity in the Sangha where both the wording and the purpose are fulfilled. ",
-  "pli-tv-kd10:6.2.6": "If the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, haven’t been investigated by the Sangha, haven’t been resolved by the Sangha, yet the Sangha creates unity in the Sangha, this is called unity in the Sangha where the wording is fulfilled, but not the purpose. ",
-  "pli-tv-kd10:6.2.8": "If the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, have been investigated by the Sangha, have been resolved by the Sangha, and the Sangha then creates unity in the Sangha, this is called unity in the Sangha where both the wording and the purpose are fulfilled.” ",
+  "pli-tv-kd10:6.2.4": "And there’s the unity in the Sangha where both the wording and the purpose are fulfilled. ",
+  "pli-tv-kd10:6.2.6": "If the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, hasn’t been decided by the Sangha, hasn’t been resolved by the Sangha, yet the Sangha unifies the Sangha, this is called unity in the Sangha where the wording is fulfilled, but not the purpose. ",
+  "pli-tv-kd10:6.2.8": "If the basis for the arguments and disputes in the Sangha, for the schism, fracture, and separation in the Sangha, has been decided by the Sangha, has been resolved by the Sangha, and the Sangha then unifies the Sangha, this is called unity in the Sangha where both the wording and the purpose are fulfilled.” ",
   "pli-tv-kd10:6.3.1": "Upāli then got up from his seat, put his upper robe over one shoulder, raise his joined palms, and spoke in verse to the Buddha: ",
-  "pli-tv-kd10:6.3.2": "“In regard to the business and discussions of the Sangha, ",
+  "pli-tv-kd10:6.3.2": "“In regard to the duties and discussions of the Sangha, ",
   "pli-tv-kd10:6.3.3": "In regard to the business that arises and the investigations—",
   "pli-tv-kd10:6.3.4": "The person who is very beneficial, how does he handle these? ",
   "pli-tv-kd10:6.3.5": "How is a monk fit to deal with these?” ",
