Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -567,12 +567,12 @@
   "pli-tv-kd10:6.3.1": "Upāli then got up from his seat, put his upper robe over one shoulder, raise his joined palms, and spoke in verse to the Buddha: ",
   "pli-tv-kd10:6.3.2": "“In regard to the duties and discussions of the Sangha, ",
   "pli-tv-kd10:6.3.3": "In regard to the business that arises and the investigations—",
-  "pli-tv-kd10:6.3.4": "The person who is very beneficial, how does he handle these? ",
+  "pli-tv-kd10:6.3.4": "A person of great value, how does he handle these? ",
   "pli-tv-kd10:6.3.5": "How is a monk fit to deal with these?” ",
   "pli-tv-kd10:6.3.6": "“Blameless in the basic morality, ",
-  "pli-tv-kd10:6.3.7": "Watching over his own behavior, with senses well-restrained—",
+  "pli-tv-kd10:6.3.7": "Watching his own behavior, with senses well-restrained—",
   "pli-tv-kd10:6.3.8": "His enemies cannot legitimately criticize him; ",
-  "pli-tv-kd10:6.3.9": "There is nothing for them to correct in him. ",
+  "pli-tv-kd10:6.3.9": "There’s nothing for them to correct in him. ",
   "pli-tv-kd10:6.3.10": "Having such purity of conduct, ",
   "pli-tv-kd10:6.3.11": "Enabled, he speaks confidently; ",
   "pli-tv-kd10:6.3.12": "Without fear, he trembles not in a gathering; ",
