Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -575,7 +575,7 @@
   "pli-tv-kd10:6.3.9": "There’s nothing for them to correct in him. ",
   "pli-tv-kd10:6.3.10": "Having such purity of conduct, ",
   "pli-tv-kd10:6.3.11": "Enabled, he speaks confidently; ",
-  "pli-tv-kd10:6.3.12": "Without fear, he trembles not in a gathering; ",
+  "pli-tv-kd10:6.3.12": "Without fear, he doesn’t tremble in a gathering; ",
   "pli-tv-kd10:6.3.13": "He does not mangle the meaning, but speaks to the point. ",
   "pli-tv-kd10:6.3.14": "If asked a question in a gathering, ",
   "pli-tv-kd10:6.3.15": "He is neither diffident nor timid. ",
