--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -576,8 +576,8 @@
   "pli-tv-kd10:6.3.10": "Having such purity of conduct, ",
   "pli-tv-kd10:6.3.11": "Enabled, he speaks confidently; ",
   "pli-tv-kd10:6.3.12": "Without fear, he doesn’t tremble in a gathering; ",
-  "pli-tv-kd10:6.3.13": "He does not mangle the meaning, but speaks to the point. ",
-  "pli-tv-kd10:6.3.14": "If asked a question in a gathering, ",
+  "pli-tv-kd10:6.3.13": "He doesn’t mangle the meaning and speaks naturally. ",
+  "pli-tv-kd10:6.3.14": "If then asked a question in a gathering, ",
   "pli-tv-kd10:6.3.15": "He is neither diffident nor timid. ",
   "pli-tv-kd10:6.3.16": "His words are timely and pertinent; ",
   "pli-tv-kd10:6.3.17": "He skilfully satisfies a discerning gathering. ",
