--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -578,9 +578,9 @@
   "pli-tv-kd10:6.3.12": "Without fear, he doesn’t tremble in a gathering; ",
   "pli-tv-kd10:6.3.13": "He doesn’t mangle the meaning and speaks naturally. ",
   "pli-tv-kd10:6.3.14": "If then asked a question in a gathering, ",
-  "pli-tv-kd10:6.3.15": "He is neither diffident nor timid. ",
+  "pli-tv-kd10:6.3.15": "He’s neither diffident nor timid. ",
   "pli-tv-kd10:6.3.16": "His words are timely and pertinent; ",
-  "pli-tv-kd10:6.3.17": "He skilfully satisfies a discerning gathering. ",
+  "pli-tv-kd10:6.3.17": "He watchfully satisfies a discerning gathering. ",
   "pli-tv-kd10:6.3.18": "Respectful of more senior monks, ",
   "pli-tv-kd10:6.3.19": "Confident about the Teachings, ",
   "pli-tv-kd10:6.3.20": "Able to investigate, clever in discussion, ",
