Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -582,10 +582,10 @@
   "pli-tv-kd10:6.3.16": "His words are timely and pertinent; ",
   "pli-tv-kd10:6.3.17": "He watchfully satisfies a discerning gathering. ",
   "pli-tv-kd10:6.3.18": "Respectful of more senior monks, ",
-  "pli-tv-kd10:6.3.19": "Confident about the Teachings, ",
+  "pli-tv-kd10:6.3.19": "Having confidence in his teacher, ",
   "pli-tv-kd10:6.3.20": "Able to investigate, clever in discussion, ",
   "pli-tv-kd10:6.3.21": "Skilled in defeating his opponents. ",
-  "pli-tv-kd10:6.3.22": "He refutes his opponents, ",
+  "pli-tv-kd10:6.3.22": "Wherever his opponents turn, he refutes them, ",
   "pli-tv-kd10:6.3.23": "And the crowd is convinced. ",
   "pli-tv-kd10:6.3.24": "He does not abandon a position, ",
   "pli-tv-kd10:6.3.25": "And answers questions without hurting anyone. ",
