--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -587,7 +587,7 @@
   "pli-tv-kd10:6.3.21": "Skilled in defeating his opponents. ",
   "pli-tv-kd10:6.3.22": "Wherever his opponents turn, he refutes them, ",
   "pli-tv-kd10:6.3.23": "And the crowd is convinced. ",
-  "pli-tv-kd10:6.3.24": "He does not abandon a position, ",
+  "pli-tv-kd10:6.3.24": "He doesn’t abandon his position, ",
   "pli-tv-kd10:6.3.25": "And answers questions without hurting anyone. ",
   "pli-tv-kd10:6.3.26": "He is able to take on the job of messenger, ",
   "pli-tv-kd10:6.3.27": "And about the business of the Sangha, they speak to him. ",
