Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -588,13 +588,13 @@
   "pli-tv-kd10:6.3.22": "Wherever his opponents turn, he refutes them, ",
   "pli-tv-kd10:6.3.23": "And the crowd is convinced. ",
   "pli-tv-kd10:6.3.24": "He doesn’t abandon his position, ",
-  "pli-tv-kd10:6.3.25": "And answers questions without hurting anyone. ",
-  "pli-tv-kd10:6.3.26": "He is able to take on the job of messenger, ",
+  "pli-tv-kd10:6.3.25": "Yet answers questions without hurting anyone. ",
+  "pli-tv-kd10:6.3.26": "He’s capable of acting as messenger, ",
   "pli-tv-kd10:6.3.27": "And about the business of the Sangha, they speak to him. ",
-  "pli-tv-kd10:6.3.28": "When speaking, when sent out by the community, ",
+  "pli-tv-kd10:6.3.28": "When speaking, or sent out by the community of monks, ",
   "pli-tv-kd10:6.3.29": "He doesn’t think, ‘I’m doing it.’ ",
-  "pli-tv-kd10:6.3.30": "As far as the bases for committing offenses, ",
-  "pli-tv-kd10:6.3.31": "And how they are cleared, ",
+  "pli-tv-kd10:6.3.30": "As far as the actions by which one commits offenses, ",
+  "pli-tv-kd10:6.3.31": "And how they’re cleared, ",
   "pli-tv-kd10:6.3.32": "Both these analyses he has learnt well. ",
   "pli-tv-kd10:6.3.33": "He is skilled in the ways of clearing offenses. ",
   "pli-tv-kd10:6.3.34": "If one is sent away for one’s conduct, ",
