Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -596,7 +596,7 @@
   "pli-tv-kd10:6.3.30": "As far as the actions by which one commits offenses, ",
   "pli-tv-kd10:6.3.31": "And how they’re cleared, ",
   "pli-tv-kd10:6.3.32": "Both these analyses he has learnt well. ",
-  "pli-tv-kd10:6.3.33": "He is skilled in the ways of clearing offenses. ",
+  "pli-tv-kd10:6.3.33": "He’s skilled in the ways of clearing offenses. ",
   "pli-tv-kd10:6.3.34": "If one is sent away for one’s conduct, ",
   "pli-tv-kd10:6.3.35": "But once sent away one acts rightly, ",
   "pli-tv-kd10:6.3.36": "There is re-admittance for one who lives thus. ",
