--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -599,10 +599,10 @@
   "pli-tv-kd10:6.3.33": "He’s skilled in the ways of clearing offenses. ",
   "pli-tv-kd10:6.3.34": "If one is sent away for one’s conduct, ",
   "pli-tv-kd10:6.3.35": "But once sent away one acts rightly, ",
-  "pli-tv-kd10:6.3.36": "There is re-admittance for one who lives thus. ",
+  "pli-tv-kd10:6.3.36": "There’s re-admittance for one who lives thus. ",
   "pli-tv-kd10:6.3.37": "This too he knows, the one skilled in analysis. ",
   "pli-tv-kd10:6.3.38": "Respectful of more senior monks, ",
-  "pli-tv-kd10:6.3.39": "Whether junior, senior, or of middle standing, ",
+  "pli-tv-kd10:6.3.39": "Yet whether junior, senior, or of middle standing, ",
   "pli-tv-kd10:6.3.40": "The wise practice for the benefit of the many—",
   "pli-tv-kd10:6.3.41": "Such a monk is fit to deal with these.” ",
   "pli-tv-kd10:6.3.42": "The tenth chapter on those from Kosambī is finished. ",
