Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -609,6 +609,9 @@
   "pli-tv-kd10:6.3.43": "This is the summary:",
   "pli-tv-kd10:6.3.44": "“The splendid Victor was in Kosambī, ",
   "pli-tv-kd10:6.3.45": "When disputing for not seeing an offense; ",
+  "pli-tv-kd10:6.3.46": "One should not eject for just any offense, ",
+  "pli-tv-kd10:6.3.47": "One should confess an offense out of faith. ",
+  "pli-tv-kd10:6.3.48": "Just there inside the monastery zone, ",
   "pli-tv-kd10:6.3.64": "The chapter on those from Kosambī is finished. ",
   "pli-tv-kd10:6.3.65": "The Long Division is finished. ",
   "pli-tv-kd10:6.3.66": "The canonical text of the Long Division is finished."
