Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -615,6 +615,11 @@
   "pli-tv-kd10:6.3.49": "And just Bālaka, Vaṁsadā; ",
   "pli-tv-kd10:6.3.50": "And Pālileyyā, Sāvatthī, ",
   "pli-tv-kd10:6.3.51": "And Sāriputta, Kolita. ",
+  "pli-tv-kd10:6.3.52": "Mahākassapa, and Kaccāna, ",
+  "pli-tv-kd10:6.3.53": "Koṭṭhika, and with Kappina; ",
+  "pli-tv-kd10:6.3.54": "Mahācunda, Anuruddha, ",
+  "pli-tv-kd10:6.3.55": "And both Revata and Upāli. ",
+  "pli-tv-kd10:6.3.56": "Ānanda, and also Rāhula, ",
   "pli-tv-kd10:6.3.64": "The chapter on those from Kosambī is finished. ",
   "pli-tv-kd10:6.3.65": "The Long Division is finished. ",
   "pli-tv-kd10:6.3.66": "The canonical text of the Long Division is finished."
