Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -620,6 +620,9 @@
   "pli-tv-kd10:6.3.54": "Mahācunda, Anuruddha, ",
   "pli-tv-kd10:6.3.55": "And both Revata and Upāli. ",
   "pli-tv-kd10:6.3.56": "Ānanda, and also Rāhula, ",
+  "pli-tv-kd10:6.3.57": "Gotamī, Anāthapiṇḍika; ",
+  "pli-tv-kd10:6.3.58": "And separate dwellings, ",
+  "pli-tv-kd10:6.3.59": "And food and requisites equally. ",
   "pli-tv-kd10:6.3.64": "The chapter on those from Kosambī is finished. ",
   "pli-tv-kd10:6.3.65": "The Long Division is finished. ",
   "pli-tv-kd10:6.3.66": "The canonical text of the Long Division is finished."
