Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -623,6 +623,10 @@
   "pli-tv-kd10:6.3.57": "Gotamī, Anāthapiṇḍika; ",
   "pli-tv-kd10:6.3.58": "And separate dwellings, ",
   "pli-tv-kd10:6.3.59": "And food and requisites equally. ",
+  "pli-tv-kd10:6.3.60": "No-one is to give their consent, ",
+  "pli-tv-kd10:6.3.61": "Questioned by Upāli; ",
+  "pli-tv-kd10:6.3.62": "Blameless in morality, ",
+  "pli-tv-kd10:6.3.63": "Harmonious in the Teaching of the Victor.” ",
   "pli-tv-kd10:6.3.64": "The chapter on those from Kosambī is finished. ",
   "pli-tv-kd10:6.3.65": "The Long Division is finished. ",
   "pli-tv-kd10:6.3.66": "The canonical text of the Long Division is finished."
