Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -627,7 +627,7 @@
   "pli-tv-kd10:6.3.61": "Questioned by Upāli; ",
   "pli-tv-kd10:6.3.62": "Blameless in morality, ",
   "pli-tv-kd10:6.3.63": "Harmonious in the Teaching of the Victor.” ",
-  "pli-tv-kd10:6.3.64": "The chapter on those from Kosambī is finished. ",
+  "pli-tv-kd10:6.3.64": "The chapter about Kosambī is finished. ",
   "pli-tv-kd10:6.3.65": "The Long Division is finished. ",
   "pli-tv-kd10:6.3.66": "The canonical text of the Long Division is finished."
 }
