--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -830,7 +830,7 @@
   "pli-tv-kd17:5.1.27": "Only a monk of regular standing, one who belongs to the same Buddhist sect and is present within the same monastery zone, can cause a schism in the Sangha.” ",
   "pli-tv-kd17:5.2.1": "“Venerable Sir, we speak of ‘schism in the Sangha’. ",
   "pli-tv-kd17:5.2.2": "But how is there schism in the Sangha?” ",
-  "pli-tv-kd17:5.2.3": "“Take the case when monks proclaim what is contrary to the Teaching as the Teaching. ",
+  "pli-tv-kd17:5.2.3": "“Take the case when monks proclaim what’s contrary to the Teaching as being in accordance with it. ",
   "pli-tv-kd17:5.2.4": "They proclaim what is the Teaching as contrary to the Teaching. ",
   "pli-tv-kd17:5.2.5": "They proclaim what is contrary to the Monastic Law as the Monastic Law. ",
   "pli-tv-kd17:5.2.6": "They proclaim what is the Monastic Law as contrary to the Monastic Law. ",
