Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -833,7 +833,7 @@
   "pli-tv-kd17:5.2.3": "“Take the case when monks proclaim what’s contrary to the Teaching as being in accordance with it. ",
   "pli-tv-kd17:5.2.4": "They proclaim what’s in accordance with the Teaching as contrary to it. ",
   "pli-tv-kd17:5.2.5": "They proclaim what’s contrary to the Monastic Law as being in accordance with it. ",
-  "pli-tv-kd17:5.2.6": "They proclaim what is the Monastic Law as contrary to the Monastic Law. ",
+  "pli-tv-kd17:5.2.6": "They proclaim what’s in accordance with the Monastic Law as contrary to it. ",
   "pli-tv-kd17:5.2.7": "They proclaim what hasn’t been spoken by the Buddha as spoken by the Buddha. ",
   "pli-tv-kd17:5.2.8": "They proclaim what has been spoken by the Buddha as not spoken by the Buddha. ",
   "pli-tv-kd17:5.2.9": "They proclaim what was not practiced by the Buddha as practiced by the Buddha. ",
