Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -835,7 +835,7 @@
   "pli-tv-kd17:5.2.5": "They proclaim what’s contrary to the Monastic Law as being in accordance with it. ",
   "pli-tv-kd17:5.2.6": "They proclaim what’s in accordance with the Monastic Law as contrary to it. ",
   "pli-tv-kd17:5.2.7": "They proclaim what hasn’t been spoken by the Buddha as spoken by him. ",
-  "pli-tv-kd17:5.2.8": "They proclaim what has been spoken by the Buddha as not spoken by the Buddha. ",
+  "pli-tv-kd17:5.2.8": "They proclaim what’s been spoken by the Buddha as not spoken by him. ",
   "pli-tv-kd17:5.2.9": "They proclaim what was not practiced by the Buddha as practiced by the Buddha. ",
   "pli-tv-kd17:5.2.10": "They proclaim what was practiced by the Buddha as not practiced by the Buddha. ",
   "pli-tv-kd17:5.2.11": "They proclaim what was not laid down by the Buddha as laid down by the Buddha. ",
