Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -838,7 +838,7 @@
   "pli-tv-kd17:5.2.8": "They proclaim what’s been spoken by the Buddha as not spoken by him. ",
   "pli-tv-kd17:5.2.9": "They proclaim what wasn’t practiced by the Buddha as practiced by him. ",
   "pli-tv-kd17:5.2.10": "They proclaim what was practiced by the Buddha as not practiced by him. ",
-  "pli-tv-kd17:5.2.11": "They proclaim what was not laid down by the Buddha as laid down by the Buddha. ",
+  "pli-tv-kd17:5.2.11": "They proclaim what wasn’t laid down by the Buddha as laid down by him. ",
   "pli-tv-kd17:5.2.12": "They proclaim what was laid down by the Buddha as not laid down by the Buddha. ",
   "pli-tv-kd17:5.2.13": "They proclaim a non-offense as an offense. ",
   "pli-tv-kd17:5.2.14": "They proclaim an offense as a non-offense. ",
