--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -852,7 +852,7 @@
   "pli-tv-kd17:5.3.1": "“Venerable Sir, we speak of ‘unity in the Sangha’. ",
   "pli-tv-kd17:5.3.2": "But how is there unity in the Sangha?” ",
   "pli-tv-kd17:5.3.3": "“Take the case when monks proclaim what’s contrary to the Teaching as such. ",
-  "pli-tv-kd17:5.3.4": "They proclaim what is the Teaching as the Teaching. ",
+  "pli-tv-kd17:5.3.4": "They proclaim what’s in accordance with the Teaching as such. ",
   "pli-tv-kd17:5.3.5": "They proclaim what is contrary to the Monastic Law as contrary to the Monastic Law. ",
   "pli-tv-kd17:5.3.6": "They proclaim what is the Monastic Law as the Monastic Law. ",
   "pli-tv-kd17:5.3.7": "They proclaim what hasn’t been spoken by the Buddha as not spoken by the Buddha. ",
