--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -854,7 +854,7 @@
   "pli-tv-kd17:5.3.3": "“Take the case when monks proclaim what’s contrary to the Teaching as such. ",
   "pli-tv-kd17:5.3.4": "They proclaim what’s in accordance with the Teaching as such. ",
   "pli-tv-kd17:5.3.5": "They proclaim what’s contrary to the Monastic Law as such. ",
-  "pli-tv-kd17:5.3.6": "They proclaim what is the Monastic Law as the Monastic Law. ",
+  "pli-tv-kd17:5.3.6": "They proclaim what’s in accordance with the Monastic Law as such. ",
   "pli-tv-kd17:5.3.7": "They proclaim what hasn’t been spoken by the Buddha as not spoken by the Buddha. ",
   "pli-tv-kd17:5.3.8": "They proclaim what has been spoken by the Buddha as spoken by the Buddha. ",
   "pli-tv-kd17:5.3.9": "They proclaim what was not practiced by the Buddha as not practiced by the Buddha. ",
