Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -858,7 +858,7 @@
   "pli-tv-kd17:5.3.7": "They proclaim what hasn’t been spoken by the Buddha as such. ",
   "pli-tv-kd17:5.3.8": "They proclaim what’s been spoken by the Buddha as such. ",
   "pli-tv-kd17:5.3.9": "They proclaim what wasn’t practiced by the Buddha as such. ",
-  "pli-tv-kd17:5.3.10": "They proclaim what was practiced by the Buddha as practiced by the Buddha. ",
+  "pli-tv-kd17:5.3.10": "They proclaim what was practiced by the Buddha as such. ",
   "pli-tv-kd17:5.3.11": "They proclaim what was not laid down by the Buddha as not laid down by the Buddha. ",
   "pli-tv-kd17:5.3.12": "They proclaim what was laid down by the Buddha as laid down by the Buddha. ",
   "pli-tv-kd17:5.3.13": "They proclaim a non-offense as a non-offense. ",
