Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -861,7 +861,7 @@
   "pli-tv-kd17:5.3.10": "They proclaim what was practiced by the Buddha as such. ",
   "pli-tv-kd17:5.3.11": "They proclaim what wasn’t laid down by the Buddha as such. ",
   "pli-tv-kd17:5.3.12": "They proclaim what was laid down by the Buddha as such. ",
-  "pli-tv-kd17:5.3.13": "They proclaim a non-offense as a non-offense. ",
+  "pli-tv-kd17:5.3.13": "They proclaim a non-offense as such. ",
   "pli-tv-kd17:5.3.14": "They proclaim an offense as an offense. ",
   "pli-tv-kd17:5.3.15": "They proclaim a light offense as light. ",
   "pli-tv-kd17:5.3.16": "They proclaim a heavy offense as heavy. ",
