--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -862,7 +862,7 @@
   "pli-tv-kd17:5.3.11": "They proclaim what wasn’t laid down by the Buddha as such. ",
   "pli-tv-kd17:5.3.12": "They proclaim what was laid down by the Buddha as such. ",
   "pli-tv-kd17:5.3.13": "They proclaim a non-offense as such. ",
-  "pli-tv-kd17:5.3.14": "They proclaim an offense as an offense. ",
+  "pli-tv-kd17:5.3.14": "They proclaim an offense as such. ",
   "pli-tv-kd17:5.3.15": "They proclaim a light offense as light. ",
   "pli-tv-kd17:5.3.16": "They proclaim a heavy offense as heavy. ",
   "pli-tv-kd17:5.3.17": "They proclaim a curable offense as curable. ",
