--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -896,7 +896,7 @@
   "pli-tv-kd17:5.5.7": "He has the view that what he says is illegitimate and the view that the schism is illegitimate. He misrepresents his view of what is true, his belief of what is true, his acceptance of what is true, and his sentiment of what is true. He makes a proclamation and distributes voting tickets, saying, ",
   "pli-tv-kd17:5.5.8": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this.’ ",
   "pli-tv-kd17:5.5.9": "This person who causes a schism in the Sangha is irredeemably destined to an eon in hell. ",
-  "pli-tv-kd17:5.5.10": "Again, a monk proclaims what’s in accordance with the Teaching as contrary to it. ",
+  "pli-tv-kd17:5.5.10": "Again, a monk proclaims what’s contrary to the Teaching as being in according with it. ",
   "pli-tv-kd17:5.5.11": "He has the view that what he says is illegitimate, but the view that the schism is legitimate. He misrepresents his view of what is true, his belief of what is true, his acceptance of what is true, and his sentiment of what is true. He makes a proclamation and distributes voting tickets, saying, ",
   "pli-tv-kd17:5.5.12": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; take this, approve of this.’ ",
   "pli-tv-kd17:5.5.13": "This person, too, who causes a schism in the Sangha is irredeemably destined to an eon in hell. ",
