Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -914,7 +914,7 @@
   "pli-tv-kd17:5.5.26": "This person, too, who causes a schism in the Sangha is irredeemably destined to an eon in hell. ",
   "pli-tv-kd17:5.5.27": "Again, a monk proclaims what’s in accordance with the Teaching as contrary to it, ",
   "pli-tv-kd17:5.5.28": "what’s contrary to the Monastic Law as being in accordance with it, ",
-  "pli-tv-kd17:5.5.29": "what is the Monastic Law as contrary to the Monastic Law, ",
+  "pli-tv-kd17:5.5.29": "what’s in accordance with the Monastic Law as contrary to it, ",
   "pli-tv-kd17:5.5.30": "what hasn’t been spoken by the Buddha as spoken by the Buddha, ",
   "pli-tv-kd17:5.5.31": "what has been spoken by the Buddha as not spoken by the Buddha, ",
   "pli-tv-kd17:5.5.32": "what was not practiced by the Buddha as practiced by the Buddha, ",
